vlib/v/checker/tests/option_ptr_err.vv
fn main() {
	mut var := unsafe { ?&int(none) }
	assert *var == 0
}
